--- a/.editorconfig
+++ b/.editorconfig
@@ -7,6 +7,9 @@ insert_final_newline = true
 [sh.cmd]
 end_of_line = crlf
 
+[password.txt]
+insert_final_newline = false
+
 [*.{sh,bats,bash}]
 indent_style = space
 indent_size = 4
@@ -19,5 +22,8 @@ shell_variant = posix
 [*.yaml]
 indent_size = 2
 
-[*.{bash,bats}]
+[*.bash]
 shell_variant = bash
+
+[*.bats]
+shell_variant = bats
